REP-597 adds correct links to language switch and updates visibillity behaviour

--- a/save/webpages/mir-layout/scss/project_styles/_navigation.scss
+++ b/save/webpages/mir-layout/scss/project_styles/_navigation.scss
@@ -34,7 +34,16 @@
 .nav-item.active {
   background-color: $darkContrastGray;
 }
-
+html[lang="de"] {
+  .lang-switch-de {
+    display: none;
+  }
+}
+html[lang="en"] {
+  .lang-switch-en {
+    display: none;
+  }
+}
 
 
 
